Implementa a database e o authentication

--- a/.env.yaml
+++ b/.env.yaml
@@ -1,8 +1,26 @@
+enviroment: 
+  enviroment: development
 # Development-specific settings.
 development:
   PORT: 3000
   DROP_DATABASE: true
+  #Database
+  DB_HOST: localhost
+  DB_USER: postgres
+  DB_PASSWORD: admin
+  DB_NAME: postgres
+  DB_PORT: 5432
+  redis:
+    host: localhost
+    port: 6379
+    password: admin
+  jwt: 
+    secret: secret
+    expires: 3600  
 # Production-specific settings.
 production:
   PORT: 80
   DROP_DATABASE: false
+
+
+  
