--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   },
   "homepage": "https://github.com/rfcosta85/authetication_service_spotnotifier.git#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "redis": "^4.6.13",
     "yenv": "^3.0.1"
   }
 }
