Implementa o is-authorization

--- a/.env.yaml
+++ b/.env.yaml
@@ -4,12 +4,12 @@ enviroment:
 development:
   PORT: 3000
   DROP_DATABASE: true
-  #Database
-  DB_HOST: localhost
-  DB_USER: postgres
-  DB_PASSWORD: admin
-  DB_NAME: postgres
-  DB_PORT: 5432
+  database:
+    host: localhost
+    user: postgres
+    password: admin
+    databaseName: postgres
+    port: 5432    
   redis:
     host: localhost
     port: 6379
